--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 * { font-family: 'Montserrat', sans-serif; }
+
+body, html {
+  height: 100%;
+  min-height: 100%;
+  color: #fff;
+}
+#root {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+video {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+}
