--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,700');
+* {outline:0;}
+.btn:focus {
+    outline: 0;
+    box-shadow: none;
+}
 .footer {
   position: absolute;
   bottom: 0;
@@ -11,6 +16,9 @@
   margin-bottom: 1%;
   text-transform: uppercase;
   letter-spacing: 4px;
+}
+.description {
+  width: 40%;
 }
 h2 {
   text-transform: uppercase;
@@ -41,15 +49,23 @@ h2 {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0;
-  transition: color 2s ease-in-out,background-color 2s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  /* transition: color 2s ease-in-out,background-color 2s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; */
+
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 #fff;
+  -webkit-transition: ease-out 2s;
+  -moz-transition: ease-out 2s;
+  transition: ease-out 2s;
+  border-color: #fff;
+
 }
 .btn-white {
-  color: #fff;
-  background-color: transparent;
-  border-color: #fff;
+  /* background-color: transparent; */
+  /* border-color: #fff; */
 }
 .btn:hover {
-    color: #212529;
-    background-color: #fff;
+    color: #000;
+    /* background-color: #fff; */
     text-decoration: none;
+    box-shadow: inset 300px 0 0 0 #fff;
 }
