--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 body, html {
   height: 100%;
   min-height: 100%;
-  color: #fff;
+  background-color: #000 !important;
 }
 #root {
   position: relative;
