--- a/src/Video.css
+++ b/src/Video.css
@@ -1,24 +1,23 @@
 /* NOTE: Only use if not doing the Ken Burns effect. */
-/* video {
+video {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   min-width: 100%;
   min-height: 100%;
-} */
+}
 
 /* NOTE: If only showing the standard video then comment out everything below. */
-video {
+/* video {
   position: absolute;
   left: 0;
   top: 0;
-  /* transform: translate(-50%, -50%); */
   min-width: 100%;
   min-height: 100%;
 }
 video {
-  animation:move 35s ease-in-out infinite; /* Change this to alternate to stop the loop. */
+  animation:move 35s ease-in-out infinite;
   -ms-animation:move 35s ease-in-out infinite;
   -webkit-animation:move 35s ease-in-out infinite;
   -0-animation:move 35s ease-in-out infinite;
@@ -28,16 +27,16 @@ video {
 @-webkit-keyframes move {
   from {
     transform: scale(1.0);
-    -ms-transform: scale(1.0); /* IE 9 */
-    -webkit-transform: scale(1.0); /* Safari and Chrome */
-    -o-transform: scale(1.0); /* Opera */
-    -moz-transform: scale(1.0); /* Firefox */
+    -ms-transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    -o-transform: scale(1.0);
+    -moz-transform: scale(1.0);
   }
   to {
   	transform: scale(1.3);
-    -ms-transform: scale(1.3); /* IE 9 */
-    -webkit-transform: scale(1.3); /* Safari and Chrome */
-    -o-transform: scale(1.3); /* Opera */
-    -moz-transform: scale(1.3); /* Firefox */
+    -ms-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    -moz-transform: scale(1.3);
   }
-}
+} */
