--- a/src/Footer.css
+++ b/src/Footer.css
@@ -9,8 +9,10 @@
   bottom: 0;
   width: 100%;
   height: auto;
-  margin-bottom: 5%;
   color: #fff;
+  /* background: rgba(0,0,0,0.5); */
+  padding: 50px 0px;
+  text-shadow: 2px 2px 2px #000000 !important;
 }
 .subtitle {
   margin-bottom: 1%;
@@ -30,39 +32,123 @@ h2 {
   font-weight: 300;
 }
 
-.btn {
-  display: inline-block;
-  font-weight: 400;
-  color: #fff;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: .5rem 2.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0;
-  /* transition: color 2s ease-in-out,background-color 2s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; */
 
-  cursor: pointer;
-  box-shadow: inset 0 0 0 0 #fff;
-  -webkit-transition: ease-out 2s;
-  -moz-transition: ease-out 2s;
-  transition: ease-out 2s;
-  border-color: #fff;
-
-}
-.btn-white {
-  /* background-color: transparent; */
-  /* border-color: #fff; */
-}
-.btn:hover {
+button {
+    font-family: Graphik;
     color: #000;
-    /* background-color: #fff; */
-    text-decoration: none;
-    box-shadow: inset 300px 0 0 0 #fff;
+    background: transparent;
+    border-radius: 0;
+    border: 1px solid #1b1b1e;
+    padding: 7px 37px;
+    margin-right: 0;
+    position: relative;
+    z-index: 0;
+    transition: all .5s ease;
+    display: inline-block;
+    min-width: 190px;
+    width: auto;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 19px;
+    color: #fff;
+    border: transparent;
+    margin-top: 20px;
+    overflow: hidden
+}
+button span {
+    text-transform: uppercase;
+    font-size: 11px;
+    letter-spacing: 1pt;
+    font-weight: 700
+}
+button:after {
+    content: "";
+    width: 101%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #1b1b1e;
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+    z-index: -1;
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    transition: .6s;
+    transition-timing-function: ease
+}
+button:hover {
+    color: #fff;
+    border: 1px solid #1b1b1e
+}
+button:hover:after {
+    -webkit-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    transform: scaleX(1)
+}
+button .bottom,
+button .left,
+button .right,
+button .top {
+    position: absolute;
+    background-color: #fff;
+    background-color: hsla(0, 0%, 100%, .5)
+}
+button .left {
+    left: 0;
+    bottom: 0;
+    height: 0%;
+    width: 1px;
+    transition: height .2s ease-out
+}
+button .top {
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    transition: width .4s ease-out;
+    transition-delay: .3s
+}
+button .right {
+    top: 0;
+    right: 0;
+    height: 0%;
+    width: 1px;
+    transition: height .2s ease-out;
+    transition-delay: .7s
+}
+button .bottom {
+    bottom: 0;
+    right: 0;
+    width: 0;
+    height: 1px;
+    transition: width .5s ease-out;
+    transition-delay: .9s
+}
+button.in .left,
+button.in .right {
+    height: 100%
+}
+button.in .bottom,
+button.in .top {
+    width: 100%
+}
+button.in span {
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"
+}
+button span {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    transition: opacity .5s ease-out
+}
+button:hover {
+    color: #000;
+    border: transparent
+}
+button:after,
+button:before {
+    background-color: #fff
 }
