--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
-* { font-family: 'Montserrat', sans-serif; }
+* { font-family: 'Montserrat', sans-serif; outline: none !important;}
 
 body, html {
   height: 100%;
@@ -11,4 +11,7 @@ body, html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+.container {
+  margin-top: 15px;
 }
