--- a/src/Video.css
+++ b/src/Video.css
@@ -1,5 +1,5 @@
 /* NOTE: Only use if not doing the Ken Burns effect. */
-video {
+video.mainVideo {
   position: absolute;
   left: 50%;
   top: 50%;
